Update MFT framework to v11

--- a/.gitignore
+++ b/.gitignore
@@ -231,4 +231,4 @@ docs/archive/
 docs/developer/CURSOR_AGENT_*.md
 
 # Private research content - not for public release
-projects/wip/
+projects/wip/.claude/
