--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,14 @@ requests>=2.28.0
 click>=8.0.0
 rich>=13.0.0
 ratelimit>=2.2.1
+loguru>=0.7.0
 
 # Data processing and analysis
 pandas>=1.5.0
 numpy>=1.24.0
 scipy>=1.10.0
+scikit-learn>=1.6.0
+json5>=0.12.0
 
 # Configuration and serialization
 PyYAML>=6.0.1,<7.0
